--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm run build
+            npm run test
       - save_cache:
           paths: [frontend/node_modules]
           key: Test frontend
@@ -100,7 +100,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run build
+            npm run test
       - save_cache:
           paths: [backend/node_modules]
           key: Test backend
