--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,7 @@ jobs:
             cd frontend
             npm install
             # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
       - save_cache:
           paths: [frontend/node_modules]
@@ -142,6 +143,7 @@ jobs:
             cd backend
             npm install
             # npm install oauth-sign@^0.9.0
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
       - save_cache:
           paths: [backend/node_modules]
