--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ commands:
       - run:
             name: Install Ansible
             command: |
-              sudo apt update
-              sudo apt install software-properties-common
-              sudo add-apt-repository -yes --update ppa:ansible/ansible
-              sudo apt install ansible
+              apt update
+              apt install software-properties-common
+              add-apt-repository -yes --update ppa:ansible/ansible
+              apt install ansible
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
