--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,7 +225,7 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      - image:  python:3.7-alpine3.11 
+      - image:  python:3.9.16
     steps:
       - checkout
       - add_ssh_keys:
