--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ commands:
             name: Install Ansible
             command: |
               apt update
-              apt install software-properties-common -y
+              apt-get install software-properties-common -y
+              # apt install software-properties-common -y
               add-apt-repository -yes --update ppa:ansible/ansible
               apt install ansible -y
 
