--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,10 @@ commands:
       - run:
             name: Install Ansible
             command: |
-              apt update
-              apt-get install software-properties-common -y
-              # apt install software-properties-common -y
-              add-apt-repository -yes --update ppa:ansible/ansible
-              apt install ansible -y
+              sudo apt update
+              sudo apt install software-properties-common -y
+              sudo add-apt-repository -yes --update ppa:ansible/ansible
+              sudo apt install ansible -y
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
