--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
           when: on_fail
           command: |
             # Your code here
-            aWS 53 rm s3://udapeople-<<parameters.workflow_id>> --recursive
+            aws 53 rm s3://udapeople-<<parameters.workflow_id>> --recursive
             aws cloudformation delete-stack --stack-name "udapeople-frontend-<<parameters.workflow_id>>"
             aws cloudformation delete-stack --stack-name "udapeople-backend-<<parameters.workflow_id>>"
 
