--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,15 +10,14 @@ commands:
             command: |
               sudo apt update
               sudo apt install software-properties-common -y
-              sudo add-apt-repository -yes --update ppa:ansible/ansible
-              sudo apt install ansible -y
+              sudo apt install ansible -y 
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
       workflow_id: 
         default: "$(CIRCLE_WORKFLOW_ID:0:7)"
-        type: string    
+        type: string
     steps:
       - run:
           name: Destroy environments
@@ -27,14 +26,14 @@ commands:
             # Your code here
             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
             aws cloudformation delete-stack --stack-name "udapeople-frontend-<<parameters.workflow_id>>"
-            aws cloudformation delete-stack --stack-name "udapeople-backend-<<parameters.workflow_id>>"
+            aws cloudformation delete-stack --stack-name "udapeople-backend-<<parameters.workflow_id>>" 
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
       # Add parameter here
       workflow_id: 
-        default: "$(CIRCLE WORKFLOW_ID:0:7)"
+        default: "$(CIRCLE_WORKFLOW_ID:0:7)"
         type: string
     steps:
       - run:
