--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,7 +268,7 @@ jobs:
                   curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
      # Here's where you will add some code to rollback on failure   
-      - destroy-environment   
+      - destroy-environment    
       - revert-migrations
 
 #   deploy-frontend:
@@ -387,8 +387,8 @@ workflows:
               only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
 #       - deploy-frontend:
 #           requires: [run-migrations]
 #       - deploy-backend:
