--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ commands:
           # Add when this will run
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS-$(curl --insecure "https://kvdb.io/GihzLn9tKa58UmwtTTnRhb/migration_<<parameters.workflow_id>>")
+            SUCCESS=$(curl --insecure "https://kvdb.io/GihzLn9tKa58UmwtTTnRhb/migration_<<parameters.workflow_id>>")
             if(( $SUCCESS==1 )); 
             then
              cd ~/project/backend
@@ -259,13 +259,13 @@ jobs:
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration status to kvdb.io
-          command: |   
+          command: |
               if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
               then
                   # If you are using kvdb.io, generate the bucket ID "XZhzMy7UxbAd5xFwyDUAcB" in your local terminal first
                   curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
-     # Here's where you will add some code to rollback on failure   
+     # Here's where you will add some code to rollback on failure
       - destroy-environment
       - revert-migrations
 
