--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ commands:
             command: |
               sudo apt update
               sudo apt install software-properties-common -y
+              sudo add-apt-repository -yes --update ppa:ansible/ansible-2.7
               sudo apt install ansible -y 
 
   destroy-environment:
@@ -266,7 +267,7 @@ jobs:
                   curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
               fi
      # Here's where you will add some code to rollback on failure
-      - destroy-environment
+      - destroy-environment 
       - revert-migrations
 
 #   deploy-frontend:
