--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
       workflow_id: 
-        default: "$(CIRCLE_WORKFLOW_ID:0:7)"
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"
         type: string
     steps:
       - run:
@@ -34,7 +34,7 @@ commands:
     parameters:
       # Add parameter here
       workflow_id: 
-        default: "$(CIRCLE_WORKFLOW_ID:0:7)"
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"
         type: string
     steps:
       - run:
