--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,18 @@ commands:
             command: |
               sudo apt update
               sudo apt install software-properties-common -y
-              sudo apt-add-repository -yes --update ppa:ansible/ansible
+              sudo apt-add-repository --yes --update ppa:ansible/ansible
               sudo apt install ansible -y 
 
-  
-  
+  install_nodejs:
+    description: Install Node. js 13
+    steps: 
+      - run: 
+          name: Install Node. js 13
+          command: |
+            curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+            sudo apt install -y nodejs
+
   install_awscli: 
     description: "code to install aws cli"
     steps:
