--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,10 @@ commands:
   install_awscli: 
     description: "code to install aws cli"
     steps:
-      - run: |
-            name: Install AWS CLI 
-            command: |
+      - run:
+          name: Install AWS CLI 
+          when: on_fail
+          command: |
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
               unzip awscliv2.zip
               sudo ./aws/install
