--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
             command: |
               sudo apt update
               sudo apt install software-properties-common -y
-              sudo apt-add-repository -yes --update ppa:ansible/ansible
+              sudo apt-add-repository --yes --update ppa:ansible/ansible
               sudo apt install ansible -y 
 
   install_nodejs:
