deploy frontend and backend 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -303,6 +303,10 @@ jobs:
             - "7a:20:e4:88:52:95:18:f9:46:61:9a:a6:08:37:f2:cf"
       - attach_workspace:
          at: ~/
+      - run:
+            name: Install dependencies
+            command: |
+              yum install -y tar gzip
 
       - install_ansible
       - install_awscli
