deploy frontend and backend 7

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,7 +325,7 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
-            sudo npm install -g npm@latest
+            #sudo npm install -g npm@latest
             rm -rf node_modules
             npm install
             npm run build
