--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,15 +393,21 @@ jobs:
             )
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
-      - run:
-          name: Backend smoke test.
-          command: |
             if curl -s $API_URL/api/status | grep "ok"
             then
               exit 0
             else
               exit 1
             fi
+      # - run:
+      #     name: Backend smoke test.
+      #     command: |
+      #       if curl -s $API_URL/api/status | grep "ok"
+      #       then
+      #         exit 0
+      #       else
+      #         exit 1
+      #       fi
       - run:
           name: Frontend smoke test.
           command: |
@@ -421,7 +427,15 @@ jobs:
     docker:
       - image: amazon/aws-cli
     steps:
-      # Checkout code from git
+      - checkout 
+    
+      - run:
+          name: Install dep / Save Old Workflow ID to kvdb.io
+          command: |
+            export OLD_WORKFLOW_ID-$(aws cloudformation \
+            list-exports --query "Exports[?Name==\'WorkflowID\'].Value" \
+            --no-paginate --output text)
+            echo "Old Workflow ID: $OLD_WORKFLOW_ID" 
       - run:
           name: Install dependencies
           command: | 
