backend smoke test 1

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -384,20 +384,24 @@ jobs:
       - install_awscli
       
       - run:
-          name: Get backend url
+          name: Backend SmokeTest
           command: |
             #Getting the backend url (i.e backend ip)
-            BACKEND_IP=$(aws ec2 describe-instances \
+            # BACKEND_IP=$(aws ec2 describe-instances \
+            # --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            # --filter "Name=tag:Name,Values=backend-$(CIRCLE_WORKFLOW_ID:0:7)" \
+            # --output text)
+            export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filter "Name=tag:Name,Values=backend-$(CIRCLE_WORKFLOW_ID:0:7)" \
-            --output text)
-            
-            #The backend smoke test 
-
+            --filter Name=tag:Name,Values=backend-$(CIRCLE_WORKFLOW_ID:0:7) \
+            --output text
+            )
             export API_URL=http://${BACKEND_IP}:3030
             echo ${BACKEND_IP}
             echo backend-${CIRCLE_WORKFLOW_ID:0:7}
             echo ${API_URL}
+
+            #The backend smoke test 
             if curl -s $API_URL/api/status | grep "ok"
             then
               exit 0
