--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -389,11 +389,11 @@ jobs:
             #Getting the backend url (i.e backend ip)
             # BACKEND_IP=$(aws ec2 describe-instances \
             # --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            # --filter "Name=tag:Name,Values=backend-$(CIRCLE_WORKFLOW_ID:0:7)" \
+            # --filter "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             # --output text)
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filter Name=tag:Name,Values=backend-$(CIRCLE_WORKFLOW_ID:0:7) \
+            --filter Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
             --output text
             )
             export API_URL=http://${BACKEND_IP}:3030
