--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,7 +227,7 @@ jobs:
             --output text --filter Name=tag:Name,Values=backend-$(CIRCLE_WORKFLOW_ID:0:7)>> inventory.txt
             cat inventory.txt
             # export BACKEND_IP-$(aws ec2 describe-instances \
-            # --query 'Reservations [*]. Instances [* ].PublicIpAddRess' \
+            # --query 'Reservations [*]. Instances [*].PublicIpAddRess' \
             # --filter Name-tag:Name, Values-backend-$(CIRCLE_ MURKFLOM_ID:0:7) \
             # --output text
             # )
@@ -314,7 +314,7 @@ jobs:
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filter Name=tag:Name,Values=backend-$(CIRCLE_WORKFLOW_ID:0:7) \
+            --filter Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
             --output text
             )
             export API_URL="http://${BACKEND_IP}:3030"
