--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -428,8 +428,8 @@ jobs:
             else 
               exit 1
             fi 
-      - destroy-environment
-      - revert-migrations
+      # - destroy-environment
+      # - revert-migrations
       # Here's where you will add some code to rollback on failure  
 
   cloudfront-update:
@@ -441,41 +441,52 @@ jobs:
       - run:
           name: Install dep / Save Old Workflow ID to kvdb.io
           command: |
-            export OLD_WORKFLOW_ID-$(aws cloudformation \
+            export OLD_WORKFLOW_ID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\'WorkflowID\'].Value" \
             --no-paginate --output text)
             echo "Old Workflow ID: $OLD_WORKFLOW_ID" 
-            curl https://kvdb.io/$(kvd ucket)/old_workflow_id -d "$(OLD_WORKFLOW_ID"
+            curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "$(OLD_WORKFLOW_ID"
       
       - run:
           name: Update cloudfront distribution
           command: |
             aws cloudformation deploy \
-            --template-file .circleci/files/cloudfront.yml\
+            --template-file .circleci/files/cloudfront.yml \
             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
             --stack-name InitialStack
 
       - destroy-environment
       - revert-migrations
 
-# cleanup:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Get old stack workflow id
-#           command: |
-#             # your code here
-#             export OldWorkflowID="the id here"
-#             export STACKS=[] #put the list of stacks here
-#       - run:
-#           name: Remove old stacks and files
-#           command: |
-#             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-#             then
-#               # your code here
-#             fi
+cleanup:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - run:
+          name: Get old stack workflow id
+          command: |
+            export STACKS=($(aws cloudformation list-stacks \
+            --query "StackSummaries[*].StackName" \
+            --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+            echo Stack names: "${STACKS[@]}"
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
+            echo Old Workflow ID: $OldWorkflowID
+      
+      - run: 
+          name: Remove Old Stacks and files
+          command: |
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
+            echo Old Workflow ID: $OldWorkflowID
+
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"]]
+            then 
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformationn delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            fi 
+        
             
 
 workflows:
