--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "Add Node.js from source"
   become: true
   shell: |
-    curl -sL https://deb.nodesource.com/setup_14.x | bash -
+    curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
 
 - name: "Install Node.js 13"
   become: true
