--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -422,16 +422,26 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-wesite.${AWS_DEFAULT_REGION}.amazonaws.com
+
+            FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
             echo $FRONTEND_WEBSITE
-            if curl -s $FRONTEND_WESITE | grep "Welcome"
+            if curl -s $FRONTEND_WEBSITE | grep "Welcome"
             then
+              # This is the intentional error, if "Welcome" is indeed in the response this step will exit with exit code 1
               exit 0
-            else 
+            else
               exit 1
-            fi 
-      # - destroy-environment
-      # - revert-migrations
+            fi
+            # FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-wesite.${AWS_DEFAULT_REGION}.amazonaws.com
+            # echo $FRONTEND_WEBSITE
+            # if curl -s $FRONTEND_WESITE | grep "Welcome"
+            # then
+            #   exit 0
+            # else 
+            #   exit 1
+            # fi 
+      - destroy-environment
+      - revert-migrations
       # Here's where you will add some code to rollback on failure  
 
   cloudfront-update:
