--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,6 +393,7 @@ jobs:
             # --query 'Reservations[*].Instances[*].PublicIpAddress' \
             # --filter "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             # --output text)
+
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filter Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
@@ -446,26 +447,38 @@ jobs:
 
   cloudfront-update:
     docker:
-      - image: amazon/aws-cli
+      - image: cimg/base:stable
     steps:
-      - checkout 
-    
+      - checkout
+      - install_awscli
+      - install_nodejs
       - run:
           name: Install dep / Save Old Workflow ID to kvdb.io
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation \
-            list-exports --query "Exports[?Name==\'WorkflowID\'].Value" \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
-            echo "Old Workflow ID: $OLD_WORKFLOW_ID" 
-            curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "$(OLD_WORKFLOW_ID"
+            echo "Old Wokflow ID": $OLD_WORKFLOW_ID"
+            curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "${OLD_WORKFLOW_ID}"
+
+            # export OLD_WORKFLOW_ID=$(aws cloudformation \
+            # list-exports --query "Exports[?Name==\'WorkflowID\'].Value" \
+            # --no-paginate --output text)
+            # echo "Old Workflow ID: $OLD_WORKFLOW_ID" 
+            # curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "$(OLD_WORKFLOW_ID"
       
       - run:
           name: Update cloudfront distribution
           command: |
             aws cloudformation deploy \
-            --template-file .circleci/files/cloudfront.yml \
-            --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-            --stack-name InitialStack
+              --template-file cloudfront.yml \
+              --stack-name udapeople-cloudfront \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}
+
+            # aws cloudformation deploy \
+            # --template-file .circleci/files/cloudfront.yml \
+            # --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            # --stack-name InitialStack
 
       - destroy-environment
       - revert-migrations
