--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -457,7 +457,8 @@ jobs:
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
+            --no-paginate --output text
+            )
             echo "Old Wokflow ID": $OLD_WORKFLOW_ID"
             curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "${OLD_WORKFLOW_ID}"
 
@@ -465,7 +466,7 @@ jobs:
             # list-exports --query "Exports[?Name==\'WorkflowID\'].Value" \
             # --no-paginate --output text)
             # echo "Old Workflow ID: $OLD_WORKFLOW_ID" 
-            # curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "$(OLD_WORKFLOW_ID"
+            # curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "$(OLD_WORKFLOW_ID)"
       
       - run:
           name: Update cloudfront distribution
