--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -457,11 +457,10 @@ jobs:
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text
-            )
+            --no-paginate --output text)
             echo "Old Wokflow ID": $OLD_WORKFLOW_ID"
-            curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "${OLD_WORKFLOW_ID}"
-            )
+            curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "$OLD_WORKFLOW_ID" 
+
             # export OLD_WORKFLOW_ID=$(aws cloudformation \
             # list-exports --query "Exports[?Name==\'WorkflowID\'].Value" \
             # --no-paginate --output text)
