--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -465,14 +465,14 @@ jobs:
           name: Update cloudfront distribution
           command: |
             aws cloudformation deploy \
-              --template-file cloudfront.yml \
-              --stack-name udapeople-cloudfront \
-              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+            --template-file .circleci/files/cloudfront.yml \
+            --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+            --stack-name udapeople-cloudfront 
 
             # aws cloudformation deploy \
-            # --template-file .circleci/files/cloudfront.yml \
-            # --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-            # --stack-name InitialStack
+            #   --template-file cloudfront.yml \
+            #   --stack-name udapeople-cloudfront \
+            #   --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
 
       - destroy-environment
       - revert-migrations
