--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -456,7 +456,7 @@ jobs:
           name: Install dep / Save Old Workflow ID to kvdb.io
           command: |
             export OLD_WORKFLOW_ID=$(aws cloudformation \
-                        list-exports --query "Exports[?Name=="WorkflowID"].Value" \
+                        list-exports --query "Exports[?Name==\"WorkflowID\"].Value" \
                         --no-paginate --output text)
             echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
             curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "${OLD_WORKFLOW_ID}"
