--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -455,9 +455,9 @@ jobs:
       - run:
           name: Install dep / Save Old Workflow ID to kvdb.io
           command: |
-            export OLD_WORKFLOW_ID=$(aws cloudformation \
+            export OLD_WORKFLOW_ID=($(aws cloudformation \
                         list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                        --no-paginate --output text) 
+                        --no-paginate --output text)) 
             echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
             curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "${OLD_WORKFLOW_ID}"
 
@@ -487,24 +487,36 @@ jobs:
           name: Get old stack workflow id
           command: |
             export STACKS=($(aws cloudformation list-stacks \
-            --query "StackSummaries[*].StackName" \
-            --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+                --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo Stack names: "${STACKS[@]}"
             export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
             echo Old Workflow ID: $OldWorkflowID
-      
-      - run: 
-          name: Remove Old Stacks and files
-          command: |
-            export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
-            echo Old Workflow ID: $OldWorkflowID
-
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"]]
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            fi 
+            fi
+      #       export STACKS=($(aws cloudformation list-stacks \
+      #       --query "StackSummaries[*].StackName" \
+      #       --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
+      #       echo Stack names: "${STACKS[@]}"
+      #       export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
+      #       echo Old Workflow ID: $OldWorkflowID
+      
+      # - run: 
+      #     name: Remove Old Stacks and files
+      #     command: |
+      #       export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
+      #       echo Old Workflow ID: $OldWorkflowID
+
+      #       if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"]]
+      #       then
+      #         aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+      #         aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+      #         aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+      #       fi 
         
             
 
