--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -457,7 +457,7 @@ jobs:
           command: |
             export OLD_WORKFLOW_ID=($(aws cloudformation \
                         list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                        --no-paginate --output text)) 
+                        --no-paginate --output text))
             echo "Old Wokflow ID: $OLD_WORKFLOW_ID"
             curl https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id -d "${OLD_WORKFLOW_ID}"
 
@@ -490,7 +490,7 @@ jobs:
                 --query "StackSummaries[*].StackName" \
                 --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             echo Stack names: "${STACKS[@]}"
-            export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
+            export OldWorkflowID=$(curl --insecure https://kvdb.io//old_workflow_id)
             echo Old Workflow ID: $OldWorkflowID
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
@@ -501,7 +501,7 @@ jobs:
       #       export STACKS=($(aws cloudformation list-stacks \
       #       --query "StackSummaries[*].StackName" \
       #       --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-      #       echo Stack names: "${STACKS[@]}"  
+      #       echo Stack names: "${STACKS[@]}"
       #       export OldWorkflowID=$(curl --insecure https://kvdb.io/XZhzMy7UxbAd5xFwyDUAcB/old_workflow_id)
       #       echo Old Workflow ID: $OldWorkflowID
       
@@ -513,7 +513,7 @@ jobs:
 
       #       if [[ "${STACKS[@]}" =~ "${OldWorkflowID}"]]
       #       then
-      #         aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive   
+      #         aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
       #         aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
       #         aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
       #       fi 
