--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -466,6 +466,8 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/
       - install_awscli
       - run:
           name: Get old stack workflow id
